--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.15.5",
+    "@types/pretty": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "ejs": "^3.1.9",
