--- a/package.json
+++ b/package.json
@@ -16,20 +16,18 @@
     "author": "Jérémie PIELLARD <jeremie.piellard@gmail.com> (https://github.com/piellardj)",
     "repository": "github:piellardj/chalet-lepanoramique",
     "engines": {
-        "node": ">=18.14.2"
+        "node": ">=18.16.0"
     },
     "devDependencies": {
         "@types/bootstrap": "^5.2.6",
-        "@types/node": "^18.15.11",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
-        "eslint": "^8.38.0",
+        "@types/node": "^20.2.5",
+        "@typescript-eslint/eslint-plugin": "^5.59.9",
+        "@typescript-eslint/parser": "^5.59.9",
+        "eslint": "^8.42.0",
         "http-server": "^14.1.1",
-        "sass": "^1.62.0",
+        "sass": "^1.63.2",
         "shx": "^0.3.4",
-        "typescript": "^5.0.4"
-    },
-    "dependencies": {
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.3"
     }
 }
